# voxelrender

./: .gitignore  BUILD_FIX_NEEDED.md  BUILD_SUCCESS.md  LAUNCHER_IMPLEMENTATION.md  README.md  SAND_SIMULATOR_FIX_COMPLETE.md  SAND_SIMULATOR_STATUS.md  plan.md
VENPOD/: CHUNK_TEST_INSTRUCTIONS.md  CMakeLists.txt  build.ps1  clean.ps1  debug.ps1  ps-history-all.txt  rebuild.ps1  run.ps1  setup.ps1  vcpkg.json
VENPOD/assets/shaders/Common/: BitPacking.hlsli  PCGRandom.hlsli  SharedTypes.hlsli  SimplexNoise.hlsli
VENPOD/assets/shaders/Compute/: CS_Brush.hlsl  CS_BrushRaycast.hlsl  CS_ChunkScanner.hlsl  CS_GravityChunk.hlsl  CS_Initialize.hlsl  CS_PrepareIndirect.hlsl  CS_UpdateChunkOccupancy.hlsl
VENPOD/assets/shaders/Graphics/: PS_Raymarch.hlsl
VENPOD/src/: launcher.cpp  launcher.h  main.cpp  main_launcher.cpp  main_sandbox.cpp  main_sandsim.cpp
VENPOD/src/Core/: Engine.cpp  Engine.h  ServiceLocator.cpp  ServiceLocator.h  Timer.cpp  Timer.h  Window.cpp  Window.h
VENPOD/src/Graphics/: Renderer.cpp  Renderer.h  VoxelRenderer.cpp  VoxelRenderer.h
VENPOD/src/Graphics/RHI/: DX12CommandQueue.cpp  DX12CommandQueue.h  DX12ComputePipeline.cpp  DX12ComputePipeline.h  DX12Device.cpp  DX12Device.h  DX12GraphicsPipeline.cpp  DX12GraphicsPipeline.h  DescriptorHeap.cpp  DescriptorHeap.h  GPUBuffer.cpp  GPUBuffer.h  GPUTexture.cpp  GPUTexture.h  ShaderCompiler.cpp  ShaderCompiler.h  d3dx12.h
VENPOD/src/Input/: BrushController.cpp  BrushController.h  InputManager.cpp  InputManager.h
VENPOD/src/Simulation/: Chunk.cpp  Chunk.h  ChunkCoord.h  ChunkGenerationTest.cpp  ChunkGenerationTest.h  ChunkManager.cpp  ChunkManager.h  ChunkStressTest.cpp  ChunkStressTest.h  InfiniteChunkManager.cpp  InfiniteChunkManager.h  PhysicsDispatcher.cpp  PhysicsDispatcher.h  TerrainConstants.h  VoxelWorld.cpp  VoxelWorld.h
VENPOD/src/UI/: BrushPanel.cpp  BrushPanel.h  DebugOverlay.cpp  DebugOverlay.h  ImGuiBackend.cpp  ImGuiBackend.h  MaterialPalette.cpp  MaterialPalette.h  PauseMenu.cpp  PauseMenu.h
VENPOD/src/Utils/: BitPacking.h  FileUtils.cpp  FileUtils.h  MortonCode.h  Result.h
